Added a couple section headings

--- a/diss.tex
+++ b/diss.tex
@@ -6,10 +6,11 @@
 \input{frontmatter/pages}
 
 % Intro
-\input{ch1}
+\input{intro}
+\input{background}
 
 % Chapter 1
-\input{ch2}
+\input{ch1}
 
 % Appendices
 \appendix
