--- a/common/macros.tex
+++ b/common/macros.tex
@@ -29,3 +29,5 @@
 
 % Use for commenting
 \newcommand{\yncomment}[1]{{\textcolor{blue}{\textsc{\textbf{[#1 --YN]}}}}}
+
+\newcommand{\tempcite}[1]{{\textcolor{red}{\textsc{\textbf{[#1]}}}}}
