--- a/diss.bib
+++ b/diss.bib
@@ -1,4 +1,66 @@
-@misc{Example19,
-	author = "Example Author",
-	title = "Example Article",
-	year = "2019"}
+@article{devries2018learning,
+  title={Learning Confidence for Out-of-Distribution Detection in Neural Networks},
+  author={DeVries, Terrance and Taylor, Graham W},
+  journal={stat},
+  volume={1050},
+  pages={13},
+  year={2018}
+}
+
+@inproceedings{Ren2019,
+  title={Likelihood Ratios for Out-of-Distribution Detection},
+  author={J. Ren and Peter J. Liu and E. Fertig and Jasper Snoek and Ryan Poplin and Mark A. DePristo and Joshua V. Dillon and Balaji Lakshminarayanan},
+  booktitle={NeurIPS},
+  year={2019}
+}
+
+@article{Grathwohl2020,
+  title={Your classifier is secretly an energy based model and you should treat it like one},
+  author={Grathwohl, Will and Wang, Kuan-Chieh and Jacobsen, Joern-Henrik and Duvenaud, David and Norouzi, Mohammad and Swersky, Kevin},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
+
+
+@inproceedings{Zhai2016,
+  title={Deep Structured Energy Based Models for Anomaly Detection},
+  author={Shuangfei Zhai and Yu Cheng and W. Lu and Zhongfei Zhang},
+  booktitle={ICML},
+  year={2016}
+}
+
+@inproceedings{Lee2018,
+archivePrefix = {arXiv},
+arxivId = {1711.09325},
+author = {Lee, Kimin and Lee, Honglak and Lee, Kibok and Shin, Jinwoo},
+booktitle = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
+eprint = {1711.09325},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{Training confidence-calibrated classifiers for detecting out-of-distribution samples}},
+year = {2018}
+}
+
+@article{Liang2017,
+archivePrefix = {arXiv},
+arxivId = {1706.02690},
+author = {Liang, Shiyu and Li, Yixuan and Srikant, R.},
+eprint = {1706.02690},
+journal = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
+month = {jun},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{Enhancing The Reliability of Out-of-distribution Image Detection in Neural Networks}},
+url = {http://arxiv.org/abs/1706.02690},
+year = {2017}
+}
+
+@inproceedings{Hendrycks2019,
+archivePrefix = {arXiv},
+arxivId = {1610.02136},
+author = {Hendrycks, Dan and Gimpel, Kevin},
+booktitle = {5th International Conference on Learning Representations, ICLR 2017 - Conference Track Proceedings},
+eprint = {1610.02136},
+month = {oct},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{A baseline for detecting misclassified and out-of-distribution examples in neural networks}},
+year = {2017}
+}
