--- a/common/macros.tex
+++ b/common/macros.tex
@@ -31,3 +31,9 @@
 \newcommand{\yncomment}[1]{{\textcolor{blue}{\textsc{\textbf{[#1 --YN]}}}}}
 
 \newcommand{\tempcite}[1]{{\textcolor{red}{\textsc{\textbf{[#1]}}}}}
+
+%%%%%%%%%%%%%%%%%%  Define some useful shortcuts for parentheses that scale
+\newcommand{\p}[1]{\left( {#1} \right)}
+\newcommand{\s}[1]{\left[ {#1} \right]}
+\newcommand{\br}[1]{\left\{ {#1} \right\}}
+\newcommand{\norm}[1]{\left|\left| {#1} \right|\right|}
