--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,14 @@
+@article{anderson1982reverse,
+  title={Reverse-time diffusion equation models},
+  author={Anderson, Brian DO},
+  journal={Stochastic Processes and their Applications},
+  volume={12},
+  number={3},
+  pages={313--326},
+  year={1982},
+  publisher={Elsevier}
+}
+
 @article{devries2018learning,
   title={Learning Confidence for Out-of-Distribution Detection in Neural Networks},
   author={DeVries, Terrance and Taylor, Graham W},
